--- a/web/Views/especialista/graficasHospital.xhtml
+++ b/web/Views/especialista/graficasHospital.xhtml
@@ -93,6 +93,20 @@
                             </p:fieldset>
                         </h:form>   
                         
+                         <h:form>
+                            <p:growl id="growl" showDetail="true" showSummary=""/>
+                            <p:fieldset id="pnl"  legend="Área a la que pertenece" toggleable="true" class="siBordes">
+                                <div id="graficos">
+                                    <p:panelGrid columns="1" styleClass="noBordes" columnClasses="left,right" style=" width: 800px;">
+                                        <p:chart id="chtMod12" type="bar" model="#{oSGJB.barModel13}"  />
+
+                                    </p:panelGrid>
+                                </div>
+                                <br/>                                 
+                            </p:fieldset>
+                        </h:form>   
+                        
+                        
                         <h:form>
                             <p:growl id="growl" showDetail="true" showSummary=""/>
                             <p:fieldset id="pnl"  legend="Años de práctica" toggleable="true" class="siBordes">
