--- a/web/Views/especialista/modeloSG.xhtml
+++ b/web/Views/especialista/modeloSG.xhtml
@@ -148,19 +148,34 @@
                                         </p:selectOneMenu>
 
                                         <p:outputLabel  for="numero" value="Número de atributos:" style="font-weight: bolder"/>                                        
-                                         <p:selectOneMenu  id="numero" value="#{oSGJB.numeroSeleccionado}" required="true" style="width:125px">
+                                        <p:selectOneMenu  id="numero" value="#{oSGJB.numeroSeleccionado}" required="true" style="width:125px">
                                             <f:selectItem itemLabel="1" itemValue="1"/>
                                             <f:selectItem itemLabel="2" itemValue="2"/>
                                             <f:selectItem itemLabel="3" itemValue="3"/>
                                             <f:selectItem itemLabel="4" itemValue="4"/>
                                             <f:selectItem itemLabel="5" itemValue="5"/>
-                                            </p:selectOneMenu>
-                                        <p:column/>  <p:commandButton onstart="PF('statusDialog2').show()" onsuccess="PF('statusDialog2').hide()"  update="growl, frmReglas:dtReglas1, frmReglas:dtReglas" value="Crear Modelo" action="#{oSGJB.guardarModelo(claseSeleccionada, modeloSeleccionado)}"/>
+                                        </p:selectOneMenu>
+                                        <p:column/>
+
+                                        <p:commandButton 
+                                            onclick=" PF('statusDialog20').show(); setTimeout(function () {
+                                                        PF('statusDialog20').hide();
+                                                    }, 1000);
+                                                    return true;"
+                                            action="#{oSGJB.guardarModelo(claseSeleccionada, modeloSeleccionado)}"
+                                            onstart="PF('statusDialog2').show()" 
+                                            onsuccess=" PF('statusDialog2').hide()"  
+                                            update="growl, frmReglas:dtReglas1, frmReglas:dtReglas" 
+                                            value="Crear Modelo"
+                                            />
+
+                                        <p:dialog widgetVar="statusDialog20" modal="true" draggable="false" closable="false" resizable="false" showHeader="false">
+                                            <p:graphicImage name="/images/load.gif" />
+                                        </p:dialog>    
+
+
                                         <p:column/>  
-                                        
-                                        <p:dialog widgetVar="statusDialog2" modal="true" draggable="false" closable="false" resizable="false" showHeader="false">
-                                        <p:graphicImage name="/images/load.gif" />
-                                    </p:dialog>
+
                                     </h:panelGrid>
                                 </h:form>
                                         </p:tab>
